feat：DockerFile构建；chore：部分接口文档